# rpi_relay_controller

./: Cargo.toml  LICENSE  README.md
samples/: config.toml  sample.service  sample.timer
src/: main.rs
